# Merlai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-gpu.yml  ci.yml  codeql.yml  release.yml  sync-dev.yml
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.debug  Dockerfile.gpu  Dockerfile.lightweight  Dockerfile.multiarch  Dockerfile.optimized
docs/: AI_MODEL_MANAGEMENT.md  API.md  BRANCH_STRATEGY.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_OPTIMIZATION.md  OPERATIONS_GUIDE.md  README.md  SECURITY.md  SLACK_SETUP.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css  package-lock.json  package.json  theme.js
frontend/src/src/: App.jsx
k8s/: configmap.yaml  deployment.yaml  merlai-deployment.yaml  merlai-ingress.yaml  namespace.yaml
merlai/: __init__.py  cli.py  config.py
merlai/api/: __init__.py  main.py  routes.py
merlai/core/: __init__.py  ai_models.py  midi.py  music.py  plugins.py  types.py
scripts/: build-optimized.sh  container-runtime.sh  k8s-test.sh  run_tests.sh  setup_dev.sh
tests/: __init__.py  conftest.py  test_ai_model_manager.py  test_ai_models.py  test_api.py  test_cli.py  test_config.py  test_core.py  test_integration.py
